- Debug messages added to make it easier to debug code
